2009-12-14  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Eric Seidel.

        [Qt] Fix https://bugs.webkit.org/show_bug.cgi?id=32437
        
        Amend the behaviour of DRT::notifyDone to dump only when
        the page has finished loading.
        
        This fix permits removal of the following tests from the Qt skipped list:
        fast/forms/textarea-linewrap-dynamic.html
        fast/forms/textarea-setvalue-submit.html
        fast/forms/textarea-hard-linewrap-empty.html
        fast/forms/submit-to-url-fragment.html
        http/tests/misc/percent-sign-in-form-field-name.html
        http/tests/security/escape-form-data-field-names.html
        
        However it also requires the following two to be added to the skipped list:
        
        http/tests/xmlhttprequest/access-control-basic-denied-preflight-cache.html
        svg/custom/use-instanceRoot-as-event-target.xhtml
        
        It appears the behaviour of notifyDone was masking problems with these two
        tests.

        * platform/qt/Skipped:

2009-12-14  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Eric Seidel.

        Bug 32519 -  mouseEvent fires mutiple times in
        LayoutTests/svg/custom/use-instanceRoot-as-event-target.xhtml
        
        Add test to Qt skipped list (was passing due to bug in DRT, see
        https://bugs.webkit.org/show_bug.cgi?id=32437). Updated detail on bug
        in gtk and win skipped lists.
        
        https://bugs.webkit.org/show_bug.cgi?id=32519

        * platform/gtk/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2009-12-14  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=31660
        REGRESSION (r49394): Image load event fires before the document fragment is attached.

        * fast/images/image-load-event-in-fragment-expected.txt: Added.
        * fast/images/image-load-event-in-fragment.html: Added.
